# ufocus

./: LICENSE  README.md  installer.iss  pyproject.toml  pypylon.yml  requirements.txt  resources.qrc
.github/workflows/: build-win.yml
ufocus/: camera_worker.py  dirs.py  event_filter.py  event_filter_cal.py  genesys.py  image_processing.py  logging_config.py  main.py  main_window.py  minimizer.py  ps_controller.py  resources.py  settings_manager.py  version.py  widgets.py
ufocus/cameras/: basler_camera.py  builtin_camera.py  camera_base.py  camera_manager.py  exceptions.py
ufocus/extensions/: builtin_camera.py  extensions.json
ufocus/image_processing/: exceptions.py  image_processing.py
ufocus/minimizer/: minimizer.py
ufocus/widgets/: __init__.py  floating_widget.py  fullscreen_widget.py  histograms_widget.py  image_processing_widget.py  live_camera_feed_widget.py  logging_widget.py  plotting_widget.py  power_supply_widget.py  widgets.py
ufocus/workers/: basler_camera_worker.py  builtin_camera_worker.py  camera_worker_base.py
